refactor: modernize plugin code